--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SplitMate</title>
+    <title>Contact Us</title>
   </head>
   <body>
-    <h1>Home Page</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <h1>Contact Us</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
   </body>
 </html>
