--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Home Page</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum.</p>
+
+    <button>Submit</button>
   </body>
 </html>
