--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Contact Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur.</p>
+
+    <button>Contact Us</button>
   </body>
 </html>
