Added About Button

--- a/about.html
+++ b/about.html
@@ -12,5 +12,7 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque non
       mollitia alias dolorum quod deleniti. Velit?
     </p>
+
+    <button>About Us</button>
   </body>
 </html>
