--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
   <body>
     <h1>Contact Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur.</p>
+    <span>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    </span>
 
     <button>Contact Us</button>
   </body>
