--- a/search.html
+++ b/search.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Search page</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos quo quaerat
+      soluta dignissimos itaque assumenda? Ad tempore nulla nisi ratione?
+    </p>
+  </body>
 </html>
