--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
     <h1>Home Page</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <span>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, facilis.
+      </p>
+    </span>
   </body>
 </html>
