--- a/search.html
+++ b/search.html
@@ -11,5 +11,11 @@
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos quo quaerat
       soluta dignissimos itaque assumenda? Ad tempore nulla nisi ratione?
     </p>
+
+    <span
+      ><p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat.
+      </p></span
+    >
   </body>
 </html>
