--- a/user.html
+++ b/user.html
@@ -6,7 +6,7 @@
     <title>User Page</title>
   </head>
   <body>
-    <h1>User Page</h1>
+    <h1>User Page Updated</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, corrupti.
     </p>
