--- a/search.html
+++ b/search.html
@@ -13,9 +13,8 @@
     </p>
 
     <span
-      ><p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat.
-      </p></span
-    >
+      ><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat.</p>
+    </span>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
   </body>
 </html>
