--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page Updated| SplitMate</title>
+    <title>Home Page | SplitMate 01</title>
+    <link rel="stylesheet" href="" />
     <link rel="stylesheet" href="" />
   </head>
 
@@ -15,5 +16,10 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, facilis.
       </p>
     </span>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aut alias
+      neque minima!
+    </p>
   </body>
 </html>
